Bring top matches back

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,7 +12,8 @@
  * require typica
  *= require select2
  *= require_tree .
- *=- include
+ *= stub profile.scss.erb
+ *= stub landing.css.erb
  */
 
 .popup {
