--- a/app/views/home/_step03.html.erb
+++ b/app/views/home/_step03.html.erb
@@ -3,4 +3,4 @@
 </div>
 <%# Ideally we're getting the industry list from the api %>
 <%= f.input :needs, label: false, collection: Industry.all, value_method: :description, label_method: :description, selected: @user.needs.map(&:name), input_html: { multiple: true, id: 'needs', style: 'width: 65%; margin: auto;' } %>
-<div align="center">Please select a minimum of 3.</div>
+<div class="notice" align="center">Please select a minimum of 2.</div>
