--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -81,6 +81,9 @@
                 </div>
               </div>
             </div>
+            <% if current_user.id == @user.id %>
+              <a href="mailto:info@opprtunity.com?Subject=Suggest%20a%20Category">Suggest a Category</a>
+            <% end %>
             <hr />
             <% if @user.about %>
               <div class="row">
